# fabula

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  FUTURE_PATHS.md  GOLDEN_TEST_SPEC.md  README.md  ROADMAP.md  release-plz.toml  salience-mcts.md
.github/workflows/: ci.yml  docs.yml  release-plz.yml
crates/fabula/: CHANGELOG.md  Cargo.toml
crates/fabula-bench/: Cargo.toml
crates/fabula-bench/benches/: engine.rs  mcts_comparison.rs  narratives.rs
crates/fabula-bench/src/: lib.rs  narrative_workload.rs  workload.rs
crates/fabula-discovery/: CHANGELOG.md  Cargo.toml
crates/fabula-discovery/src/: corpus.rs  emit.rs  lib.rs  score.rs  session.rs  traits.rs
crates/fabula-discovery/src/evaluators/: match_quality.rs  mod.rs  surprise.rs
crates/fabula-discovery/src/generators/: minerful.rs  mod.rs
crates/fabula-discovery/tests/: corpus_tests.rs  emit_tests.rs  integration.rs  match_quality_tests.rs  minerful_tests.rs  session_tests.rs  surprise_tests.rs  validation.rs
crates/fabula-dsl/: CHANGELOG.md  Cargo.toml
crates/fabula-dsl/src/: ast.rs  compiler.rs  error.rs  lexer.rs  lib.rs  parser.rs
crates/fabula-dsl/tests/: integration.rs  let_bindings.rs
crates/fabula-examples/: Cargo.toml
crates/fabula-examples/dsl/cookbook/: brute_force.fabula  brute_force_bounded.fabula  brute_force_exact.fabula  deadline_with_let.fabula  escalating_price.fabula  multi_signal_shutdown.fabula
crates/fabula-examples/dsl/getting_started/: suspicious_login.fabula
crates/fabula-examples/dsl/learn/: 01_pattern_declaration.fabula  02_stage.fabula  03_string_match.fabula  04_numeric_match.fabula  05_boolean_match.fabula  06_variable_binding.fabula  07_node_reference.fabula  08_cross_stage_comparison.fabula  09_negated_clause.fabula  10_unless_between.fabula  11_unless_after.fabula  12_unless_global.fabula  13_temporal_constraint.fabula  14_metric_gap.fabula  15_concurrent.fabula  16_compose_sequence.fabula  17_compose_choice.fabula  18_compose_exact_repeat.fabula  19_compose_range_repeat.fabula  20_metadata.fabula  21_deadline.fabula  22_graph.fabula
crates/fabula-examples/dsl/reference/: two_impulsive_betrayals.fabula  violation_of_hospitality.fabula
crates/fabula-examples/dsl/use_cases/: broken_promise.fabula  cascade_failure.fabula  cascade_timeout.fabula  credential_stuffing.fabula  escalating_conflict.fabula  four_eyes_violation.fabula  hospitality_violation.fabula  impossible_travel.fabula  lateral_movement.fabula  payment_before_confirmation.fabula  population_oscillation.fabula  resource_hoarding.fabula  retry_storm.fabula  shipping_sla_breach.fabula  skipped_approval.fabula  sla_breach.fabula  unapproved_export.fabula  unauthorized_access.fabula
crates/fabula-examples/src/: lib.rs
crates/fabula-examples/tests/: build_ch01.rs  build_ch02.rs  build_ch03.rs  build_ch04.rs  build_ch05.rs  build_ch06.rs  concepts_overview.rs  concepts_temporal.rs  getting_started.rs  guides_causal_tracing.rs  guides_custom_adapter.rs  guides_debugging_patterns.rs  guides_detecting_surprise.rs  guides_dsl_in_rust.rs  guides_forking_for_mcts.rs  guides_incremental_integration.rs  guides_pattern_cookbook.rs  guides_scoring_matches.rs  reference_dsl.rs  reference_engine.rs  reference_interval.rs  reference_narratives.rs  reference_patterns.rs  reference_scoring.rs  use_cases_compliance.rs  use_cases_narrative_sifting.rs  use_cases_observability.rs  use_cases_process_mining.rs  use_cases_simulation.rs  validate_dsl.rs
crates/fabula-grafeo/: Cargo.toml
crates/fabula-grafeo/src/: lib.rs
crates/fabula-memory/: CHANGELOG.md  Cargo.toml
crates/fabula-memory/src/: lib.rs
crates/fabula-memory/tests/: causality.rs  dedup_and_stats.rs  edge_cases.rs  entity_invalidation.rs  event_tagging.rs  incremental_edge_cases.rs  integration.rs  lifecycle.rs  temporal_edge_cases.rs  unordered_groups.rs
crates/fabula-narratives/: CHANGELOG.md  Cargo.toml
crates/fabula-narratives/src/: distance.rs  lib.rs  pivot.rs  scorer.rs  tension.rs  thread.rs
crates/fabula-petgraph/: CHANGELOG.md  Cargo.toml
crates/fabula-petgraph/src/: lib.rs
crates/fabula-petgraph/tests/: integration.rs
crates/fabula-test-suite/: Cargo.toml
crates/fabula-test-suite/src/: lib.rs
crates/fabula-test-suite/src/scenarios/: advance_in_place.rs  allen_temporal.rs  causality.rs  composition.rs  computed_bindings_deadline.rs  consistency.rs  cross_stage_constraints.rs  gap_analysis.rs  hospitality.rs  incremental.rs  mod.rs  multi_pattern.rs  negation.rs  romantic_arc.rs  temporal.rs  two_betrayals.rs  unordered_groups.rs  value_constraints.rs  value_disjunction.rs  winnow_replay.rs
crates/fabula-test-suite/tests/: golden.rs
crates/fabula-wasm/: Cargo.toml
crates/fabula-wasm/src/: lib.rs
crates/fabula/src/: builder.rs  causality.rs  compose.rs  datasource.rs  engine.rs  expr.rs  interval.rs  lib.rs  pattern.rs  scoring.rs
crates/fabula/src/engine/: eval.rs  free.rs  let_evaluator.rs  mod.rs  types.rs
crates/fabula/src/scoring/: mod.rs  role_conditioned.rs  sequential.rs  stu.rs  surprise.rs
crates/fabula/tests/: advance_in_place.rs  computed_bindings.rs  let_evaluator_foreign_v.rs  pattern_importance_helper.rs
docs/: DOCS_EXPANSION_PLAN.md  DOCS_PLAN.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: getting-started.md  glossary.md  learning-paths.md  research.md
docs/docs/concepts/: composition.md  design-decisions.md  how-the-engine-works.md  narrative-quality.md  overview.md  scoring-and-surprise.md  temporal-model.md
docs/docs/guides/: composing-patterns.md  computed-bindings.md  custom-adapter.md  debugging-patterns.md  detecting-surprising-events.md  dsl-in-rust.md  forking-for-mcts.md  golden-tests.md  incremental-integration.md  language-integration.md  pattern-cookbook.md  performance.md  scoring-matches.md  tag-modeling.md  tracing-causal-chains.md  troubleshooting.md
docs/docs/learn/: dsl-quick-reference.md  interactive-tutorial.mdx  patterns-from-first-principles.md  (+3 more)
docs/plugins/: remark-code-region.ts
docs/static/: CNAME
scripts/: build-wasm.sh
(+48 files in other folders)
