[workspace]
resolver = "2"
members = [
    "crates/fabula",
    "crates/fabula-memory",
    "crates/fabula-petgraph",
    "crates/fabula-grafeo",
    "crates/fabula-test-suite",
    "crates/fabula-dsl",
    "crates/fabula-wasm",
    "crates/fabula-bench",
    "crates/fabula-narratives",
    "crates/fabula-examples",
    "crates/fabula-discovery",
]

[workspace.package]
edition = "2021"
license = "MIT"
description = "Incremental pattern matching over temporal graphs"
keywords = ["graph", "pattern-matching", "temporal", "sifting", "narrative"]
repository = "https://github.com/patricker/fabula"
homepage = "https://sifting.dev"
