[package]
name = "fabula-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Benchmark harness and profiling binary for fabula"
publish = false

[dependencies]
fabula          = { path = "../fabula" }
fabula-memory   = { path = "../fabula-memory" }
fabula-petgraph = { path = "../fabula-petgraph" }
fabula-test-suite = { path = "../fabula-test-suite" }
dhat            = { version = "0.3", optional = true }

[dev-dependencies]
divan = "0.1"

[features]
dhat-heap = ["dep:dhat"]

[[bin]]
name = "fabula-profile"
path = "src/bin/profile.rs"

[[bench]]
name = "engine"
harness = false
