[package]
name = "fabula-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Benchmark harness and profiling binary for fabula"
publish = false

[dependencies]
fabula            = { path = "../fabula" }
fabula-memory     = { path = "../fabula-memory" }
fabula-narratives = { path = "../fabula-narratives" }
fabula-petgraph   = { path = "../fabula-petgraph" }
fabula-test-suite = { path = "../fabula-test-suite" }
dhat              = { version = "0.3", optional = true }

[dev-dependencies]
divan       = "0.1"
treant        = "0.4"
treant-gumbel = "0.1"

[features]
dhat-heap = ["dep:dhat"]

[[bin]]
name = "fabula-profile"
path = "src/bin/profile.rs"

[[bin]]
name = "narrative-profile"
path = "src/bin/narrative_profile.rs"

[[bench]]
name = "engine"
harness = false

[[bench]]
name = "narratives"
harness = false

[[bench]]
name = "mcts_comparison"
harness = false
