[package]
name = "fabula-discovery"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Automated sifting pattern discovery for fabula"
publish = false

[dependencies]
fabula = { path = "../fabula" }
fabula-memory = { path = "../fabula-memory" }

[dev-dependencies]
fabula-dsl = { path = "../fabula-dsl" }
