[package]
name = "fabula-discovery"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Automated sifting pattern discovery for fabula"
keywords = ["pattern-discovery", "sifting", "process-mining", "fabula", "narrative"]
categories = ["algorithms", "science"]

[dependencies]
fabula = { path = "../fabula", version = "0.2" }
fabula-memory = { path = "../fabula-memory", version = "0.2" }

[dev-dependencies]
fabula-dsl = { path = "../fabula-dsl", version = "0.2" }
