[package]
name = "fabula-dsl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Text DSL parser for fabula patterns and graphs"
keywords = ["graph", "pattern-matching", "temporal", "dsl", "parser"]

[dependencies]
fabula = { path = "../fabula" }
fabula-memory = { path = "../fabula-memory" }

[dev-dependencies]
