[package]
name = "fabula-dsl"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Text DSL parser for fabula patterns and graphs"
keywords = ["graph", "pattern-matching", "temporal", "dsl", "parser"]
categories = ["parser-implementations", "algorithms"]

[dependencies]
fabula = { path = "../fabula", version = "0.2" }
fabula-memory = { path = "../fabula-memory", version = "0.1" }

[dev-dependencies]
