[package]
name = "fabula-examples"
version = "0.1.0"
edition.workspace = true
publish = false
description = "Compiled code examples for the fabula documentation site"

[dev-dependencies]
fabula = { path = "../fabula" }
fabula-memory = { path = "../fabula-memory" }
fabula-petgraph = { path = "../fabula-petgraph" }
fabula-dsl = { path = "../fabula-dsl" }
fabula-narratives = { path = "../fabula-narratives" }
glob = "0.3"
