[package]
name = "fabula-grafeo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Grafeo graph database DataSource adapter for fabula"

[dependencies]
fabula = { path = "../fabula" }
grafeo = { version = "0.5", default-features = false, features = ["gql"] }
grafeo-core = "0.5"

[dev-dependencies]
fabula = { path = "../fabula" }
