[package]
name = "fabula-memory"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "In-memory DataSource implementation for fabula"
keywords = ["graph", "pattern-matching", "temporal", "sifting", "narrative"]
categories = ["algorithms", "data-structures"]

[dependencies]
fabula = { path = "../fabula", version = "0.1" }

[dev-dependencies]
fabula = { path = "../fabula", version = "0.1" }
