[package]
name = "fabula-narratives"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Narrative scoring and thread management for fabula's story sifting engine"
keywords = ["narrative", "sifting", "mcts", "storytelling", "fabula"]
categories = ["algorithms", "game-development"]

[dependencies]
fabula = { path = "../fabula", version = "0.1" }
