[package]
name = "fabula-petgraph"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Petgraph DataSource adapter for fabula — temporal edges on StableGraph"

[dependencies]
fabula = { path = "../fabula" }
petgraph = "0.8"

[dev-dependencies]
fabula = { path = "../fabula" }
