[package]
name = "fabula-petgraph"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Petgraph DataSource adapter for fabula — temporal edges on StableGraph"
keywords = ["graph", "pattern-matching", "temporal", "petgraph", "sifting"]
categories = ["algorithms", "data-structures"]

[dependencies]
fabula = { path = "../fabula", version = "0.2" }
petgraph = "0.8"

[dev-dependencies]
fabula = { path = "../fabula", version = "0.2" }
