[package]
name = "fabula-test-suite"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Golden test suite — shared scenarios that verify DataSource contract across all adapters"
publish = false

# This crate is never published. It depends on all adapters so that TestGraph
# impls live here (satisfying orphan rules). The single `tests/golden.rs`
# stamps out every scenario x adapter via the golden_tests! macro.

[dependencies]
fabula          = { path = "../fabula" }
fabula-memory   = { path = "../fabula-memory" }
fabula-petgraph = { path = "../fabula-petgraph" }
fabula-grafeo   = { path = "../fabula-grafeo" }

[dev-dependencies]
paste = "1"
