[package]
name = "fabula-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for fabula pattern matching engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fabula = { path = "../fabula" }
fabula-memory = { path = "../fabula-memory" }
fabula-dsl = { path = "../fabula-dsl" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
