[package]
name = "fabula"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Incremental pattern matching over temporal graphs — core library"
keywords = ["graph", "pattern-matching", "temporal", "sifting", "narrative"]
categories = ["algorithms", "data-structures"]

[features]
serde = ["dep:serde"]

[dependencies]
# Zero external dependencies by default. This is intentional.
serde = { version = "1", features = ["derive"], optional = true }
